    - Separated x86 and x64 settings.
    - Fixed misinterpretation of open filter index.
- v.5.8.5 (2024-08-21)
    - Improved EGA console usability.
    - Abolished EGA input function.
- v.5.8.6 (2025-02-04)
    - Added Spanish translation.
    - Fixed RES_save function for saving *.dll.
    - Don't use SUBLANG_CUSTOM_DEFAULT, SUBLANG_CUSTOM_UNSPECIFIED, and SUBLANG_UI_CUSTOM_DEFAULT for backward compatibility.
- v.5.8.7 (2025-04-04)
    - Reduced memory leaks and handle leaks.
    - Improved main icon.
    - Improved adding icon/cursor/bitmap/resource UI/UX.
- v.5.8.8 (2025-06-03)
    - Added digital signature to EXE files.
    - Added Turkish translation.
    - Supported TEXTINCLUDE 2 and TEXTINCLUDE 3.
    - Fixed MRadWindow crash.
    - Updated installers.
- v.5.8.9 (2025-07-01)
    - Notified icon change on saving EXE file by SHChangeNotify.
    - Added English "Neutral" entry to the language list.
    - Fixed initial language list box selection.
    - Correctly retrieving info of RLE Bitmap.
    - Reduced flickering when moving the splitter.
    - Disabled WoW filesystem redirection.
    - Enabled filesystem auto-completion.
- v.5.9.0 (2025-09-01)
    - Supported rc2 filename extension.
    - Notified icon change on extracting file by SHChangeNotify.
    - Enabled wrapping of excessively long string literals.
    - It is now possible to add a Byte Order Mark (BOM) when outputting an RC file.
- v.5.9.1 (2025-10-23)
    - Now, the maximum length of a non-wrapped string literal is 400.
    - Wrap string literals only in UTF-16 RC.
    - Fixed Search (Ctrl+F).
    - ANICURSOR and ANIICON keywords are not available on old environments. Use numeric instead of them.
    - Improved Search UI/UX.
    - Added "(bom)" option to EGA RES_save function.
    - Added High DPI support.
- v.5.9.2 (2025-10-23)
    - Fixed double signature problem.
- v.5.9.3 (20XX-YY-ZZ)
    - Fixed AutoComplete case-insensitiveness problem.
    - Fixed handling of resource name zero.