@@ -705,3 +705,4 @@
 - v.5.9.3 (20XX-YY-ZZ)
     - 自動補完の大文字小文字の分別なしの問題を修正。
     - リソース名ゼロの扱いを修正。
+    - Implemented TEXTINCLUDE 1.
