@@ -362,3 +362,4 @@
 - v.5.9.3 (20XX-YY-ZZ)
     - 자동 완성 시 대소문자 구분 문제가 수정되었습니다.
     - 리소스 이름 0 처리 문제가 수정되었습니다.
+    - Implemented TEXTINCLUDE 1.
